--- a/sway/config
+++ b/sway/config
@@ -16,11 +16,11 @@ set $down j
 set $up k
 set $right l
 
-# Your preferred terminal emulator
 set $term alacritty
 set $browser firefox
+set $music nohup flatpak run com.spotify.Client &
 # Your preferred application launcher
-set $menu wmenu-run
+set $menu rofi -show drun
 
 ### Output configuration
 #
@@ -74,7 +74,8 @@ output * max_render_time off
     bindsym $mod+Shift+f exec $browser
     # Kill focused window
     bindsym $mod+Shift+q kill
-
+    # Open Spotify
+    bindsym $mod+Shift+s exec $music
     # Start your launcher
     bindsym $mod+d exec $menu
 
